Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1009

SEGV in EndRemoteBootstrapSession on bolt80

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Private Beta
    • Public beta
    • tserver
    • None

    Description

      JD hit this issue on bolt80 when a server fell behind a bit:

          • SIGSEGV (@0xc0) received by PID 2740 (TID 0x7ff40c160700) from PID 192; stack trace: ***
            @ 0x398660f500 (unknown)
            @ 0x717cfc (unknown)
            @ 0x714d9b (unknown)
            @ 0x71599c (unknown)
            @ 0x77b9dc (unknown)
            @ 0x931748 (unknown)
            @ 0x127265f (unknown)
            @ 0x3986607851 (unknown)
            @ 0x39862e894d (unknown)
            @ 0x0 (unknown)
            (gdb) info symbol 0x717cfc
            kudu::tserver::RemoteBootstrapSession::tablet_id() const + 108 in section .text
            (gdb) info symbol 0x714d9b
            kudu::tserver::RemoteBootstrapServiceImpl::DoEndRemoteBootstrapSessionUnlocked(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, kudu::tserver::RemoteBootstrapErrorPB_Code*) + 91 in section .text
            (gdb) info symbol 0x71599c
            kudu::tserver::RemoteBootstrapServiceImpl::EndRemoteBootstrapSession(kudu::tserver::EndRemoteBootstrapSessionRequestPB const*, kudu::tserver::EndRemoteBootstrapSessionResponsePB*, kudu::rpc::RpcContext*) + 252 in section .text

      Attachments

        Activity

          People

            mpercy Mike Percy
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: